--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -5,5 +5,15 @@
     
     <welcome-file>index.jsp</welcome-file>
   
+   
   </welcome-file-list>
+  <servlet>
+	  <servlet-name>index</servlet-name>
+	  <jsp-file>/WEB-INF/index.jsp</jsp-file>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>index</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
