--- a/ProjetEncheres/.classpath
+++ b/ProjetEncheres/.classpath
@@ -14,5 +14,10 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/aCreativDesign/Downloads/j2ee.jar/j2ee.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aCreativDesign/Downloads/mssql-jdbc-9.4.1.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aCreativDesign/Downloads/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aCreativDesign/Downloads/rt-2.2.8.jar/rt-2.2.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aCreativDesign/Downloads/jar_files (1)/webcontainer-2.1.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
