--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -7,14 +7,14 @@
  	  <welcome-file>PageAccueil</welcome-file>  
   </welcome-file-list>
   
-  
+ 
 <servlet>
 	<servlet-name>PageAccueil</servlet-name>
 	<servlet-class>fr.eni.encheres.ServletPageAccueil</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>PageAccueil</servlet-name>
-	<url-pattern>/</url-pattern>
+	<url-pattern></url-pattern>
 </servlet-mapping>
 
   
