--- a/ProjetEncheres/.classpath
+++ b/ProjetEncheres/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/webcontainer-2.1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/j2ee.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
