--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,12 @@
 <servlet>
 	<servlet-name>NouvelleVente</servlet-name>
 	<servlet-class>fr.eni.encheres.ServletNouvelleVente</servlet-class>
+	<multipart-config>
+            <location>""</location> <!-- A adapter chez vous -->
+            <max-file-size>10485760</max-file-size> <!-- 10 Mo -->
+            <max-request-size>52428800</max-request-size> <!-- 5 x 10 Mo -->
+            <file-size-threshold>1048576</file-size-threshold> <!-- 1 Mo -->
+    </multipart-config>
 </servlet>
 <servlet-mapping>
 	<servlet-name>NouvelleVente</servlet-name>
