AG-page Enchères

--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,16 @@
 	<servlet-name>Encherir</servlet-name>
 	<url-pattern>/encherir</url-pattern>
 </servlet-mapping>
+
+
+<servlet>
+	<servlet-name>Encheres</servlet-name>
+	<servlet-class>fr.eni.encheres.ServletPageEncheres</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>Encheres</servlet-name>
+	<url-pattern>/les-encheres</url-pattern>
+</servlet-mapping>
   
   
   
