mise en place mdp oublié

--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -109,7 +109,7 @@
 </servlet>
 <servlet-mapping>
 	<servlet-name>ForgotPassword</servlet-name>
-	<url-pattern>/forgotPassword</url-pattern>
+	<url-pattern>/forgotpassword</url-pattern>
 </servlet-mapping>
 
 <servlet>
