--- a/ProjetEncheres/.classpath
+++ b/ProjetEncheres/.classpath
@@ -13,9 +13,8 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/rt-2.2.8.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/webcontainer-2.1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/j2ee.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="/signup/src/main/webapp/WEB-INF/lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="/signup/src/main/webapp/WEB-INF/lib/javax.mail-1.6.0.jar"/>
+	<classpathentry kind="lib" path="D:/projets-web/Projets Java/ProjetEnchere/ProjetEncheres/src/main/webapp/WEB-INF/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/projets-web/Projets Java/ProjetEnchere/ProjetEncheres/src/main/webapp/WEB-INF/lib/javax.mail-1.6.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
