--- a/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/web.xml
@@ -104,6 +104,11 @@
 	<servlet-name>Encheres</servlet-name>
 	<servlet-class>fr.eni.encheres.ServletPageEncheres</servlet-class>
 </servlet>
+<servlet-mapping>
+	<servlet-name>Encheres</servlet-name>
+	<url-pattern>/les-encheres</url-pattern>
+</servlet-mapping>
+
 
 <servlet>
 	<servlet-name>ForgotPassword</servlet-name>
