--- a/ProjetEncheres/.classpath
+++ b/ProjetEncheres/.classpath
@@ -14,7 +14,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/webcontainer-2.1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/projets-web/Projets Java/ProjetEnchere/ProjetEncheres/src/main/webapp/WEB-INF/lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/projets-web/Projets Java/ProjetEnchere/ProjetEncheres/src/main/webapp/WEB-INF/lib/javax.mail-1.6.0.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-fileupload-1.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
